# mhs-python-hw

hw_1/: pyproject.toml  task_1_1.py  task_1_2.py  task_1_3.py  test_file2.txt
hw_1/arctifacts/: task_1_1.txt  task_1_2.txt  task_1_3.txt
hw_2/: Dockerfile  README.md  docker-compose.yml  generate_pdf.py  generate_table.py  pyproject.toml
hw_2/artefacts/: package_uploading.txt  table.tex
hw_3/: main_1.py  main_2.py  main_3.py  pyproject.toml
hw_3/artefacts/: 2_matrix*.txt  2_matrix+.txt  2_matrix@.txt  hash.txt  matrix_1_serialized.json  matrix_2_serialized.pkl
hw_3/matrix_1/: matrix.py
hw_3/matrix_2/: __init__.py  matrix.py  mixins.py
hw_3/matrix_3/: matrix.py  mixins.py
hw_4/: main.py  pyproject.toml  task_4_1.py  task_4_2.py  task_4_3.py
hw_4/artefacts/: task_4_1_results.txt  task_4_2_results.txt  task_4_3_log.txt
latex-generator/: README.md  pyproject.toml
latex-generator/latex_generator/: __init__.py  latex_generator.py
