[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "latex-generator-dazaii"
version = "0.1.0"
description = "LaTeX generator for tables and images"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Arseni Voikin" }
]
license = { text = "MIT" }
dependencies = []

[project.urls]
Homepage = "https://github.com/voikin/mhs-python-hw"
